--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@proprioo/hokkaido": "^4.12.1",
+    "@proprioo/salatim": "^10.16.4",
+    "@sentry/browser": "^5.23.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,10 +13,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^5.1.3",
+    "@types/uniqid": "^5.2.0",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.2.0",
+    "tslint": "^6.1.3",
+    "typescript": "~3.7.2",
+    "uniqid": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
